# standalone-python-plugin-with-catalyst

./: requirements.txt
plugin/: CMakeLists.txt  hello.py  script.sh
plugin/pythonbinding/: CMakeLists.txt  pythonbinding.cpp
plugin/standalone-opt/: CMakeLists.txt  standalone-opt.cpp
plugin/standalone-plugin/: CMakeLists.txt
plugin/standalone-python/: CMakeLists.txt  standalone-opt.cpp
